fix: Minor right-shift of `MainMenu` mega-panel curtain

--- a/src/scss/MainMenu.scss
+++ b/src/scss/MainMenu.scss
@@ -275,15 +275,11 @@
 		position: absolute;
 		top: 0;
 		left: 0;
-		// hide scrollbar "beneath" <body>'s overflow-x:hidden
-		right: calc(-0.5 * #{$var--browser-scrollbar-width});
+		right: 0;
 		height: 100vh;
 		z-index: 3;
 
-		margin-left: calc(50% - 50vw + 0.5 * #{$var--browser-scrollbar-width});
-		padding-left: calc(50vw - 50% - 0.5 * #{$var--browser-scrollbar-width});
-		margin-right: calc(50% - 50vw);
-		padding-right: calc(50vw - 50% + 0.5 * #{$var--browser-scrollbar-width});
+		@include extendSides();
 
 		overflow-x: hidden;
 		overflow-y: auto;
